major test cleanup and coverage part 1